Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,5 +2,8 @@
 	state = active
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group CM Apps Team
+	label-Code-Review = -2..+2 group File Manager
 	label-Verified = -1..+1 group CM Apps Team
+	label-Verified = -1..+1 group File Manager
 	submit = group CM Apps Team
+	submit = group File Manager
