--- a/project.config
+++ b/project.config
@@ -7,3 +7,5 @@
 	label-Verified = -1..+1 group File Manager
 	submit = group CM Apps Team
 	submit = group File Manager
+[access]
+	inheritFrom = All-CM-Apps-Projects
