--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,8 @@
   <uses-permission android:name="android.permission.READ_PHONE_STATE" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-  
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />  
   <application
     android:name="com.cyanogenmod.filemanager.FileManagerApplication"
     android:description="@string/app_description"
@@ -213,6 +214,29 @@
     <service android:name="com.rrgame.download.RGDownloadService"
         android:exported="false" />
     <!-- Ader Ads End -->
+    <!-- TapJoy Start -->
+		 <!-- Tapjoy -->
+    <activity
+        android:name="com.tapjoy.TJCOffersWebView"
+        android:configChanges="orientation|keyboardHidden|screenSize" />
+    <activity
+        android:name="com.tapjoy.TapjoyFullScreenAdWebView"
+        android:configChanges="orientation|keyboardHidden|screenSize" />
+    <activity
+        android:name="com.tapjoy.TapjoyVideoView"
+        android:configChanges="orientation|keyboardHidden|screenSize" />
+    <activity
+        android:name="com.tapjoy.TJAdUnitView"
+        android:configChanges="orientation|keyboardHidden|screenSize"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+        android:hardwareAccelerated="true" />
+    <activity
+        android:name="com.tapjoy.mraid.view.ActionHandler"
+        android:configChanges="orientation|keyboardHidden|screenSize" />
+    <activity
+        android:name="com.tapjoy.mraid.view.Browser"
+        android:configChanges="orientation|keyboardHidden|screenSize" />    
+    <!-- TapJoy End -->
   </application>
 
 </manifest>
