Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	state = active
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group CM Apps Team
 	label-Code-Review = -2..+2 group File Manager
@@ -9,3 +8,5 @@
 	submit = group File Manager
 [access]
 	inheritFrom = All-CM-Apps-Projects
+[submit]
+	action = rebase if necessary
