--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
   <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
   <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
   <uses-permission android:name="android.permission.SET_PREFERRED_APPLICATIONS" />
+  <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
   <uses-permission android:name="android.permission.NFC"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
