--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -185,6 +185,13 @@
     </activity>
 
     <activity
+            android:name=".activities.WelcomeActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+    </activity>
+
+    <activity
       android:name=".activities.EditorActivity"
       android:label="@string/editor"
       android:configChanges="orientation|keyboardHidden|screenSize">
