--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -189,6 +189,16 @@
     </activity>
 
     <activity
+            android:name=".activities.WelcomeActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:uiOptions="none"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:windowSoftInputMode="adjustNothing"
+            android:exported="false">
+    </activity>
+
+    <activity
       android:name=".activities.EditorActivity"
       android:label="@string/editor"
       android:configChanges="orientation|keyboardHidden|screenSize">
