--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -87,7 +87,7 @@
     </service>
 
     <activity
-      android:name=".activities.NavigationActivity"
+      android:name=".activities.NavActivity"
       android:label="@string/app_name"
       android:launchMode="singleTop"
       android:uiOptions="none"
