WIP: Login and Intro Updates
-Setup the ability to login to cloud storage
-Update the first intro screen
-Design cloud storage login card
-Add cloud storage login to navdrawer

Change-Id: Ia1c3a6c7c1aa622b46d4dc8bc43b3c4bfceba837

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
   <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
   <uses-permission android:name="com.cyanogenmod.filemanager.permissions.READ_THEME"/>
+  <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
 
   <application
     android:name="FileManagerApplication"
@@ -189,6 +190,7 @@
       android:name=".activities.WelcomeActivity"
       android:label="@string/app_name"
       android:launchMode="singleTop"
+      android:theme="@style/Base.WelcomeTheme"
       android:configChanges="keyboardHidden|screenSize">
     </activity>
 
