Remove LoginFragment: Moving to settings
Change-Id: I73925e9646a24e4c9cb24d62136f6c81efe22f42

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -87,6 +87,12 @@
       </intent-filter>
     </service>
 
+    <receiver android:name=".receiver.CloudProviderReceiver">
+      <intent-filter>
+        <action android:name="com.android.settings.PROVIDER_UPDATED"/>
+      </intent-filter>
+    </receiver>
+
     <activity
       android:name=".activities.MainActivity"
       android:label="@string/app_name"
