--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -141,6 +141,7 @@
       android:label="@string/picker"
       android:uiOptions="none"
       android:configChanges="orientation|keyboardHidden|screenSize"
+      android:theme="@style/FileManager.Theme.Transparent"
       android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.GET_CONTENT" />
