WIP file detail activity
CLOUD-54
CLOUD-55

Change-Id: I5515f5472619c6544003a89c8345025bed7baafe

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -200,6 +200,13 @@
     </activity>
 
     <activity
+        android:name=".activities.FileDetailActivity"
+        android:launchMode="singleTop"
+        android:configChanges="keyboardHidden|screenSize"
+        android:theme="@style/FileDetailStyle">
+    </activity>
+
+    <activity
       android:name=".activities.EditorActivity"
       android:label="@string/editor"
       android:configChanges="orientation|keyboardHidden|screenSize">
